# mailpit

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: client.rs  error.rs  lib.rs  models.rs
tests/: application.rs  message.rs  messages.rs  other.rs  tags.rs  testing.rs
