[package]
name = "mailpit"
version = "0.1.0"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
description = "A Mailpit REST API client"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Weasy666/mailpit/"
keywords = ["mailpit", "rest", "api", "client"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
edition = "2024"

[dependencies]
base64 = { version = "0.22" }
bytes = { version = "1.10" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0" }
serde_json = { version   = "1.0" }
thiserror = { version = "2.0" }
url = { version = "2.5" }
urlencoding = { version = "2.1" }
