[package]
name = "mailpit_client"
version = "0.1.0"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
description = "A Mailpit REST API client"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Weasy666/mailpit/"
keywords = ["mailpit", "rest", "api", "client"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
edition = "2024"

[dependencies]
base64 = { version = "0.22" }
bytes = { version = "1.10" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0" }
serde_json = { version   = "1.0" }
thiserror = { version = "2.0" }
url = { version = "2.5" }
urlencoding = { version = "2.1" }

[dev-dependencies]
httpmock = { version = "0.8.2" }
pretty_assertions = { version = "1.4.1" }
tokio = { version = "1.48.0" }

[[test]]
name = "application"
path = "tests/application.rs"

[[test]]
name = "message"
path = "tests/message.rs"

[[test]]
name = "messages"
path = "tests/messages.rs"

[[test]]
name = "other"
path = "tests/other.rs"

[[test]]
name = "tags"
path = "tests/tags.rs"

[[test]]
name = "testing"
path = "tests/testing.rs"
